--- a/Frontend/wwwroot/main.html
+++ b/Frontend/wwwroot/main.html
@@ -1,11 +1,78 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">ChatApp</a>
+        <div class="d-flex">
+            <span class="navbar-text me-3" id="currentUserDisplay">Logged in as: </span>
+            <button class="btn btn-outline-light" id="logoutButton">Logout</button>
+        </div>
+    </div>
+</nav>
 
+<div class="container-fluid mt-3">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="mb-3">
+                <h5>Search Users</h5>
+                <div class="input-group">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Search by name or tag...">
+                    <button class="btn btn-outline-secondary" type="button" id="searchButton"><i
+                            class="fas fa-search"></i></button>
+                </div>
+                <ul id="searchResults" class="list-group mt-2" style="max-height: 150px; overflow-y: auto;">
+                </ul>
+            </div>
+            <hr>
+            <div class="mb-3">
+                <h5>Friend Requests (<span id="friendRequestCount">0</span>)</h5>
+                <ul id="friendRequestsList" class="list-group" style="max-height: 150px; overflow-y: auto;">
+                </ul>
+            </div>
+            <hr>
+            <div>
+                <h5>Friends (<span id="friendsCount">0</span>)</h5>
+                <ul id="friendsList" class="list-group" style="max-height: 300px; overflow-y: auto;">
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-md-9">
+            <div id="chatArea" class="card">
+                <div class="card-header" id="chatHeader">
+                    Select a friend to start chatting
+                </div>
+                <div class="card-body messages-panel" id="messagesPanel" style="height: 60vh; overflow-y: scroll;">
+                </div>
+                <div class="card-footer">
+                    <div id="messageInputArea" class="input-group d-none">
+                        <input type="text" id="messageInput" class="form-control" placeholder="Type your message...">
+                        <button class="btn btn-primary" type="button" id="sendMessageButton">Send</button>
+                    </div>
+                </div>
+            </div>
+            <div id="noChatSelected" class="text-center mt-5">
+                <p>Select a friend from the list to start a conversation or search for new users.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@8.0.7/dist/browser/signalr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/api.js"></script>
+<script src="js/auth.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/chatClient.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
