--- a/Frontend/wwwroot/main.html
+++ b/Frontend/wwwroot/main.html
@@ -73,6 +73,7 @@
 <script src="js/auth.js"></script>
 <script src="js/ui.js"></script>
 <script src="js/chatClient.js"></script>
+<script src="js/notificationClient.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
