--- a/Frontend/wwwroot/main.html
+++ b/Frontend/wwwroot/main.html
@@ -41,7 +41,7 @@
             <hr>
             <div>
                 <h5>Friends (<span id="friendsCount">0</span>)</h5>
-                <ul id="friendsList" class="list-group" style="max-height: 300px; overflow-y: auto;">
+                <ul id="conversationsList" class="list-group" style="max-height: 300px; overflow-y: auto;">
                 </ul>
             </div>
         </div>
